--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
+    <groupId>org.example</groupId>
     <artifactId>JGMP-2022-Summer-Fall</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>1-30-monitoring-and-troubleshooting-in-java-applications</module>
+        <module>2-36-search-engines</module>
+    </modules>
 
 </project>
