--- a/3-41-code-quality/pom.xml
+++ b/3-41-code-quality/pom.xml
@@ -2,22 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>JGMP-2022-Summer-Fall</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>3-41-code-quality</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
-    <groupId>org.example</groupId>
-    <artifactId>JGMP-2022-Summer-Fall</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>1-30-monitoring-and-troubleshooting-in-java-applications</module>
-        <module>2-36-search-engines</module>
-        <module>3-41-code-quality</module>
-    </modules>
 
 </project>
