--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>1-30-monitoring-and-troubleshooting-in-java-applications</module>
-        <module>2-36-search-engines</module>
-        <module>3-41-code-quality</module>
+        <!--<module>1-30-monitoring-and-troubleshooting-in-java-applications</module>-->
+        <!--<module>2-36-search-engines</module>-->
+        <!--<module>3-41-code-quality</module>-->
         <module>4-40-infrastructure-as-code</module>
     </modules>
 
