--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ## Java
 .mtj.tmp/
 *.class
@@ -17,6 +16,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+!pom.xml
 
 ## IntelliJ
 out/
