--- a/4-40-infrastructure-as-code/Dockerfile
+++ b/4-40-infrastructure-as-code/Dockerfile
@@ -1,7 +1,7 @@
-FROM openjdk:11.0.16-jdk-slim as builder
+FROM maven:3.6.3-jdk-11-openj9 as builder
 ADD . /src
 WORKDIR /src
-RUN ./mvnw package -DskipTests
+RUN mvn clean package -DskipTests
 
 FROM alpine:3.10.3 as packager
 RUN apk --no-cache add openjdk11-jdk openjdk11-jmods
@@ -18,12 +18,12 @@ LABEL maintainer="Uliana S"
 ENV JAVA_HOME=/opt/petclinic-jre
 ENV PATH="$PATH:$JAVA_HOME/bin"
 COPY --from=packager "$JAVA_HOME" "$JAVA_HOME"
-COPY --from=builder /src/target/4-40-*.jar app.jar
+COPY --from=builder /src/4-40-infrastructure-as-code/target/4-40-infrastructure-as-code-1.0-SNAPSHOT.jar app.jar
 RUN addgroup --system weakuser && adduser --system weakuser && adduser weakuser weakuser && chown -R weakuser:weakuser /app.jar
 USER weakuser
-ARG maxHeapSize=500
-ARG minHeapSize=100
+ARG maxHeapSize="500"
+ARG minHeapSize="100"
 ENV Xmx=$maxHeapSize Xms=$minHeapSize
 VOLUME /target/classes
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java", "-Xmx=${Xmx}", "-Xms=${Xms}", "-jar", "/app.jar"]
