--- a/4-40-infrastructure-as-code/kubernetes/ingress-kubernetes.yaml
+++ b/4-40-infrastructure-as-code/kubernetes/ingress-kubernetes.yaml
@@ -5,13 +5,13 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    host: localhost
-    http:
-      paths: /
-    path:
-    pathType: Prefix
-    backend:
-      service:
-        name: petclinic-service
-        port:
-          number: 80
+    - host: petclinic.localhost
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: petclinic-service
+                port:
+                  number: 8080
