--- a/4-40-infrastructure-as-code/petclinic-chart/templates/ingress.yaml
+++ b/4-40-infrastructure-as-code/petclinic-chart/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "petclinic-chart.fullname" . -}}
-{{- $svcPort := .Values.petclinic.service.port -}}
+{{- $fullName := .Values.petclinic.service.name -}}
+{{- $svcPort := .Values.petclinic.service.nodePort -}}
 {{- if and .Values.ingress.ingressClassName (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.ingressClassName}}
@@ -10,32 +10,18 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Values.ingress.name }}
-  labels:
-    {{- include "petclinic-chart.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 spec:
-  {{- if and .Values.ingress.ingressClassName (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.ingress.ingressClassName }}
-  {{- end }}
   rules:
     {{- range .Values.ingress.rules }}
-    host: {{ .host | quote }}
-    http:
-      paths:
-        {{- range .paths }}
-    path: {{ .path }}
-    {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
-    pathType: {{ .pathType }}
+    - host: {{ .host | quote }}
+      http:
+        paths:
+          - path: {{ .path | default "/" }}
+            pathType: {{ .pathType | default "Prefix" }}
+            backend:
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: {{ $svcPort }}
     {{- end }}
-    backend:
-      {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
-      service:
-        name: {{ $fullName }}
-        port:
-          number: {{ $svcPort }}
-      {{- end }}
-    {{- end }}
-  {{- end }}
+{{- end }}
