[8&50 - Big Data and High Load Architecture]

--- a/1-30-monitoring-and-troubleshooting-in-java-applications/pom.xml
+++ b/1-30-monitoring-and-troubleshooting-in-java-applications/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <artifactId>JGMP-2022-Summer-Fall</artifactId>
-        <groupId>org.example</groupId>
+        <groupId>com.rntgroup</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
