--- a/8-38-messaging-in-java-event-service-impl/src/main/resources/application.yaml
+++ b/8-38-messaging-in-java-event-service-impl/src/main/resources/application.yaml
@@ -6,6 +6,8 @@ spring:
     driverClassName: org.h2.Driver
 
 messaging:
-  broker: kafka
-  host: localhost
-  port: 9092
+  broker: activemq
+  host: 127.0.0.1
+  port: 61616
+  user: admin
+  password: adminactivemq
